--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jeremy Marin | Web Developper</title>
+    <title>Jeremy Marin | Junior Web Developper</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,14 +22,25 @@
         <div class="demo-headline">
             <h1 class="demo-logo">
                 Jeremy Marin
-                <small>Web Developper</small>
+                <small>Junior Web Developper</small>
             </h1>
         </div>
-        <h1>Web Projects</h1>
 
         <h3>Maildrop</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+                <h5>2013 - Work In Progress</h5>
+                <p>Email marketing tool based on Amazon SES. The goal is to provide a cheap and convenient solution to reasonably technical email marketers. The first version will be released in late September.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>Ruby on Rails</li>
+                    <li>AngularJS</li>
+                    <li>PostgreSQL</li>
+                    <li>Twitter Bootstrap</li>
+                    <li>HAML</li>
+                </ul>
+                <p><a href="#fakelink" target="_blank">Check the Landing Page</a></p>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -38,7 +49,18 @@
 
         <h3>Good Morning</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+                <h5>2013</h5>
+                <p>Morning dashboard. This app was made to provide me with all the useful information I need when I wake up in the morning: weather, news, schedule, rental bikes available near my house... It also features details on current week weather, my bookmarks, a board to copy paste stuff, all made in AngularJS using a Ruby on Rails API.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>Ruby on Rails</li>
+                    <li>AngularJS</li>
+                    <li>SQLite</li>
+                    <li>Twitter Bootstrap</li>
+                </ul>
+                <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -47,7 +69,19 @@
 
         <h3>DaCast Ecommerce</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+                <h5>2013</h5>
+                <p>Streaming Media Ecommerce. New ecommerce platform made from scratch for my employer, based on Symfony2 PHP framework. Contents and products can be created and sold for a partner or for DaCast itself. All features are reachable by a REST API, allowing partners to interface their solution easily.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>PHP5</li>
+                    <li>Symfony2</li>
+                    <li>Redis</li>
+                    <li>MySQL</li>
+                    <li>RabbitMQ</li>
+                    <li>Twitter Bootstrap</li>
+                </ul>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -56,7 +90,18 @@
 
         <h3>Life Smoother</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+                <h5>2012</h5>
+                <p>Expenses Tracker. Personal project designed to parse bank reports, match report lines with preset categories, build analytics and anticipate how much money will be saved in the coming months. This was my first project on Symfony2.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>PHP5</li>
+                    <li>Symfony2</li>
+                    <li>MySQL</li>
+                    <li>Twitter Bootstrap</li>
+                </ul>
+                <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -65,7 +110,19 @@
 
         <h3>DaCast Home</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+            <h5>2012</h5>
+                <p>New DaCast Homepage. Migration from an old design with a messy file structure to a fresher look and better file organisation, taking advantage of Twig templates to create flexible layouts without repeating code. The user response towards this big change was very positive.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>LESS</li>
+                    <li>Twig</li>
+                    <li>Twitter Bootstrap</li>
+                </ul>
+                <p><a href="http://www.dacast.com" target="_blank">Check the Website</a></p>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -74,7 +131,17 @@
 
         <h3>Sabu Wedding</h3>
         <div class="row">
-            <div class="span7"></div>
+            <div class="span7">
+                <h5>2011</h5>
+                <p>Simple Wedding Website. I made this very basic website to keep my wedding guests informed about the ceremony, available accomodations and directions. As half of the guests were foreigners, I had to implement i18n for French, English and Japanese.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>PHP5</li>
+                    <li>HTML5</li>
+                    <li>CSS3</li>
+                    <li>i18n</li>
+                </ul>
+            </div>
             <div class="span5">
                 <img src="http://placehold.it/400x225" class="img-polaroid">
             </div>
@@ -96,10 +163,10 @@
                     <div class="footer-banner">
                         <h3 class="footer-title">Get in Touch</h3>
                         <ul>
-                            <li>LinkedIn | <a href="http://www.linkedin.com/in/jeremymarin">jeremymarin</a></li>
-                            <li>Twitter | <a href="https://twitter.com/grosgg">@grosgg</a></li>
-                            <li>Github | <a href="https://github.com/grosgg">grosgg</a></li>
-                            <li>Email | <a href="mailto:marin.jeremy@gmail.com">marin.jeremy@gmail.com</a></li>
+                            <li>LinkedIn | <a href="http://www.linkedin.com/in/jeremymarin" target="_blank">jeremymarin</a></li>
+                            <li>Twitter | <a href="https://twitter.com/grosgg" target="_blank">@grosgg</a></li>
+                            <li>Github | <a href="https://github.com/grosgg" target="_blank">grosgg</a></li>
+                            <li>Email | marin.jeremy@gmail.com</li>
                         </ul>
                     </div>
                 </div>
