Add goodmorning image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/goodmorning.png" class="img-polaroid">
             </div>
         </div>
         <hr>
