Add projects images

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <li>Twitter Bootstrap</li>
                     <li>HAML</li>
                 </ul>
-                <p><a href="#fakelink" target="_blank">Check the Landing Page</a></p>
+                <p><a href="http://maildrop.io" target="_blank">Check the Landing Page</a></p>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/maildrop.png" class="img-polaroid">
             </div>
         </div>
         <hr>
@@ -83,7 +83,7 @@
                 </ul>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/dacast_ecommerce.png" class="img-polaroid">
             </div>
         </div>
         <hr>
@@ -124,7 +124,7 @@
                 <p><a href="http://www.dacast.com" target="_blank">Check the Website</a></p>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/dacast_home.png" class="img-polaroid">
             </div>
         </div>
         <hr>
@@ -132,7 +132,7 @@
         <h3>Sabu Wedding</h3>
         <div class="row">
             <div class="span7">
-                <h5>2011</h5>
+                <h5>2011 - 2012</h5>
                 <p>Simple Wedding Website. I made this very basic website to keep my wedding guests informed about the ceremony, available accomodations and directions. As half of the guests were foreigners, I had to implement i18n for French, English and Japanese.</p>
                 <h5>Technologies Used</h5>
                 <ul>
@@ -143,7 +143,7 @@
                 </ul>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/tomogg.png" class="img-polaroid">
             </div>
         </div>
     </div>
@@ -173,5 +173,17 @@
             </div>
         </div>
     </footer>
+
+    <script type="text/javascript">
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-31460552-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+    </script>
 </body>
 </html>
