Add lifesmoother image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="span7">
                 <h5>2013 - Work In Progress</h5>
-                <p>Email marketing tool based on Amazon SES. The goal is to provide a cheap and convenient solution to reasonably technical email marketers. The first version will be released in late September.</p>
+                <p>Email marketing tool based on Amazon SES. Our goal is to provide a cheap and convenient solution to reasonably technical email marketers. The first version will be released in late September.</p>
                 <h5>Technologies Used</h5>
                 <ul>
                     <li>Ruby on Rails</li>
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="span7">
                 <h5>2013</h5>
-                <p>Morning dashboard. This app was made to provide me with all the useful information I need when I wake up in the morning: weather, news, schedule, rental bikes available near my house... It also features details on current week weather, my bookmarks, a board to copy paste stuff, all made in AngularJS using a Ruby on Rails API.</p>
+                <p>Morning dashboard. This app was made to provide me all the useful information I need when I wake up in the morning: weather, news, schedule, rental bikes available near my house... It also features details on the current week weather, my bookmarks, a board to copy paste stuff, all made in AngularJS using a Ruby on Rails API.</p>
                 <h5>Technologies Used</h5>
                 <ul>
                     <li>Ruby on Rails</li>
@@ -103,7 +103,7 @@
                 <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
             </div>
             <div class="span5">
-                <img src="http://placehold.it/400x225" class="img-polaroid">
+                <img src="images/lifesmoother.png" class="img-polaroid">
             </div>
         </div>
         <hr>
