--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="demo-headline">
             <h1 class="demo-logo">
                 Jeremy Marin
-                <small>Junior Web Developper</small>
+                <small>Web Developper</small>
             </h1>
         </div>
 
@@ -59,7 +59,7 @@
                     <li>SQLite</li>
                     <li>Twitter Bootstrap</li>
                 </ul>
-                <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
+                <p><a href="http://grosgg.no-ip.org:8025" target="_blank">Check the Demo</a> - demo@sabu.fr / password</p>
             </div>
             <div class="span5">
                 <img src="images/goodmorning.png" class="img-polaroid">
