Update title and bottom margin

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jeremy Marin | Junior Web Developper</title>
+    <title>Jeremy Marin | Web Developper</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
