--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Jeremy Marin | Web Developper</title>
+    <title>Jeremy Marin | Web Developer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -22,7 +22,7 @@
         <div class="demo-headline">
             <h1 class="demo-logo">
                 Jeremy Marin
-                <small>Web Developper</small>
+                <small>Web Developer</small>
             </h1>
         </div>
 
