--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
             </h1>
         </div>
 
+        <h3>Kotoba no Purobaida</h3>
+        <div class="row">
+            <div class="span7">
+                <h5>2013</h5>
+                <p>Japanese vocabulary application. This is designed for people who learn Japanese on their own. This tool will generate easily printable practice and test sheets in PDF based on the user own words base. Words are searchable and organized by tags.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>Ruby on Rails</li>
+                    <li>MongoDB</li>
+                    <li>Heroku</li>
+                    <li>Zurb Foundation</li>
+                </ul>
+                <p><a href="http://frozen-lake-7158.herokuapp.com/" target="_blank">Check the Website</a></p>
+            </div>
+            <div class="span5">
+                <img src="images/kotobanopurobaida.png" class="img-polaroid">
+            </div>
+        </div>
+        <hr>
+        
+        <h3>Funky Slots</h3>
+        <div class="row">
+            <div class="span7">
+                <h5>2013</h5>
+                <p>Slot machine in HTML5. This is my first try using HTML5 canvas for creating a game. I built it on top of EnchantJS, a light JS game engine. It's playable on desktop and mobile with 3 difficulty levels.</p>
+                <h5>Technologies Used</h5>
+                <ul>
+                    <li>Coffescript</li>
+                    <li>EnchantJS</li>
+                    <li>Yeoman</li>
+                    <li>Heroku</li>
+                </ul>
+                <p><a href="http://whispering-sands-9506.herokuapp.com/" target="_blank">Play the Game</a></p>
+            </div>
+            <div class="span5">
+                <img src="images/funkyslots.png" class="img-polaroid">
+            </div>
+        </div>
+        <hr>
+
         <h3>Maildrop</h3>
         <div class="row">
             <div class="span7">
@@ -100,7 +140,6 @@
                     <li>MySQL</li>
                     <li>Twitter Bootstrap</li>
                 </ul>
-                <p><a href="#fakelink" target="_blank">Check the Demo</a></p>
             </div>
             <div class="span5">
                 <img src="images/lifesmoother.png" class="img-polaroid">
