--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>Heroku</li>
                     <li>Zurb Foundation</li>
                 </ul>
-                <p><a href="http://frozen-lake-7158.herokuapp.com/" target="_blank">Check the Website</a></p>
+                <p><a href="http://frozen-lake-7158.herokuapp.com/" target="_blank">Check the Demo</a> - demo@sabu.fr / password</p>
             </div>
             <div class="span5">
                 <img src="images/kotobanopurobaida.png" class="img-polaroid">
@@ -99,7 +99,6 @@
                     <li>SQLite</li>
                     <li>Twitter Bootstrap</li>
                 </ul>
-                <p><a href="http://grosgg.no-ip.org:8025" target="_blank">Check the Demo</a> - demo@sabu.fr / password</p>
             </div>
             <div class="span5">
                 <img src="images/goodmorning.png" class="img-polaroid">
